--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="space">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0a0e17">
     <title>Audio Analyzer - Starship Horizons</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
