--- a/static/index.html
+++ b/static/index.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="step-text">
                         <span class="step-label">Run Mission</span>
-                        <span class="step-hint">Audio captures automatically</span>
+                        <span class="step-hint">Audio captures privately</span>
                     </div>
                 </div>
                 
@@ -181,7 +181,7 @@
             </div>
             <div class="progress-summary">
                 <div class="current-step">
-                    <span class="step-indicator">●</span>
+                    <span class="step-indicator"></span>
                     <span id="current-step-label">Starting analysis...</span>
                     <span id="step-counter" class="step-counter">Step 0 of 10</span>
                 </div>
