final updates and analysis. awaiting feedback

--- a/static/index.html
+++ b/static/index.html
@@ -139,6 +139,11 @@
                         <span>Record</span>
                     </button>
                     <span id="record-time" class="record-timer">00:00</span>
+                    <label class="checkbox-option telemetry-option" id="telemetry-option">
+                        <input type="checkbox" id="include-telemetry">
+                        <span>Game Telemetry</span>
+                        <span class="option-badge game">LIVE</span>
+                    </label>
                     <span class="divider-text">or</span>
                     <input type="file" id="file-input" accept="audio/*,.webm,.wav,.mp3,.m4a,.ogg,.flac" hidden>
                     <button id="upload-btn" class="btn btn-secondary">
