--- a/static/index.html
+++ b/static/index.html
@@ -613,6 +613,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.7/dist/chart.umd.min.js"></script>
+<script src="/static/telemetry.js"></script>
 <script src="/static/app.js"></script>
 </body>
 </html>
