updated vLLM, testing production speed scaling GPUs

--- a/static/index.html
+++ b/static/index.html
@@ -217,6 +217,10 @@
                         <span>Record</span>
                     </button>
                     <span id="record-time" class="record-timer">00:00</span>
+                    <span id="telemetry-status" class="telemetry-status hidden">
+                        <span class="telemetry-dot"></span>
+                        <span id="telemetry-status-text"></span>
+                    </span>
                     <label class="checkbox-option telemetry-option" id="telemetry-option">
                         <input type="checkbox" id="include-telemetry">
                         <span>Game Telemetry</span>
