--- a/static/index.html
+++ b/static/index.html
@@ -234,6 +234,164 @@
                     </button>
                     <span id="file-name" class="file-label"></span>
                 </div>
+                <!-- Live Mission Dashboard (shown during recording) -->
+                <div id="live-dashboard" class="live-dashboard hidden">
+                    <div class="live-dashboard-header">
+                        <span class="live-dot"></span>
+                        <span>Live Mission Dashboard</span>
+                        <span id="dashboard-duration" class="dashboard-duration">00:00</span>
+                        <span id="dashboard-segments" class="live-segment-count"></span>
+                    </div>
+                    <div class="live-dashboard-body">
+                        <!-- Left: Team Metrics + Notable Patterns -->
+                        <div class="dashboard-col dashboard-metrics-col">
+                            <div class="dashboard-col-title">Team Metrics</div>
+                            <!-- CES Arc Gauge (spaceship instrument) -->
+                            <div class="ces-gauge-container">
+                                <svg viewBox="0 0 120 90" class="ces-arc-svg">
+                                    <defs>
+                                        <filter id="ces-glow">
+                                            <feGaussianBlur stdDeviation="2.5" result="blur"/>
+                                            <feMerge><feMergeNode in="blur"/><feMergeNode in="SourceGraphic"/></feMerge>
+                                        </filter>
+                                        <linearGradient id="ces-grad-green" x1="0" y1="0" x2="1" y2="0">
+                                            <stop offset="0%" stop-color="#00F5A0"/>
+                                            <stop offset="100%" stop-color="#00E5FF"/>
+                                        </linearGradient>
+                                        <linearGradient id="ces-grad-cyan" x1="0" y1="0" x2="1" y2="0">
+                                            <stop offset="0%" stop-color="#00D4FF"/>
+                                            <stop offset="100%" stop-color="#00E5FF"/>
+                                        </linearGradient>
+                                        <linearGradient id="ces-grad-orange" x1="0" y1="0" x2="1" y2="0">
+                                            <stop offset="0%" stop-color="#FF6B35"/>
+                                            <stop offset="100%" stop-color="#FFAA54"/>
+                                        </linearGradient>
+                                        <linearGradient id="ces-grad-red" x1="0" y1="0" x2="1" y2="0">
+                                            <stop offset="0%" stop-color="#FF4757"/>
+                                            <stop offset="100%" stop-color="#FF6B81"/>
+                                        </linearGradient>
+                                    </defs>
+                                    <!-- Tick marks -->
+                                    <g class="ces-ticks" stroke="rgba(255,255,255,0.15)" stroke-width="0.5">
+                                        <line x1="18.4" y1="72.6" x2="22.1" y2="69.9"/>
+                                        <line x1="11.3" y1="52" x2="15.7" y2="51.2"/>
+                                        <line x1="14.5" y1="31.2" x2="18.5" y2="33.2"/>
+                                        <line x1="26" y1="14.5" x2="29" y2="17.5"/>
+                                        <line x1="43" y1="5" x2="44.5" y2="9"/>
+                                        <line x1="60" y1="2" x2="60" y2="6"/>
+                                        <line x1="77" y1="5" x2="75.5" y2="9"/>
+                                        <line x1="94" y1="14.5" x2="91" y2="17.5"/>
+                                        <line x1="105.5" y1="31.2" x2="101.5" y2="33.2"/>
+                                        <line x1="108.7" y1="52" x2="104.3" y2="51.2"/>
+                                        <line x1="101.6" y1="72.6" x2="97.9" y2="69.9"/>
+                                    </g>
+                                    <!-- Background arc (track) -->
+                                    <circle cx="60" cy="52" r="42"
+                                        fill="none" stroke="rgba(255,255,255,0.06)" stroke-width="7"
+                                        stroke-dasharray="198 66"
+                                        transform="rotate(135 60 52)"
+                                        stroke-linecap="round"/>
+                                    <!-- Segment zone markers (subtle colored arcs) -->
+                                    <circle cx="60" cy="52" r="42"
+                                        fill="none" stroke="rgba(255,71,87,0.12)" stroke-width="7"
+                                        stroke-dasharray="49.5 214.5"
+                                        transform="rotate(135 60 52)"
+                                        stroke-linecap="butt"/>
+                                    <circle cx="60" cy="52" r="42"
+                                        fill="none" stroke="rgba(255,107,53,0.1)" stroke-width="7"
+                                        stroke-dasharray="49.5 214.5"
+                                        transform="rotate(202.5 60 52)"
+                                        stroke-linecap="butt"/>
+                                    <!-- Filled arc (value) -->
+                                    <circle id="ces-arc-fill" cx="60" cy="52" r="42"
+                                        fill="none" stroke="url(#ces-grad-green)" stroke-width="7"
+                                        stroke-dasharray="0 264"
+                                        transform="rotate(135 60 52)"
+                                        stroke-linecap="round"
+                                        filter="url(#ces-glow)"
+                                        class="ces-arc-animated"/>
+                                    <!-- Score value -->
+                                    <text id="ces-arc-score" x="60" y="53"
+                                        text-anchor="middle" dominant-baseline="central"
+                                        class="ces-score-text">0</text>
+                                    <!-- Trend arrow -->
+                                    <text id="ces-arc-trend" x="60" y="70"
+                                        text-anchor="middle"
+                                        class="ces-trend-text"></text>
+                                </svg>
+                                <div class="ces-badge-row">
+                                    <span class="ces-label-text">CREW SCORE</span>
+                                    <span id="ces-badge" class="ces-badge">&mdash;</span>
+                                </div>
+                            </div>
+                            <div class="dashboard-gauge">
+                                <span class="gauge-label">Stress</span>
+                                <div class="gauge-bar-track">
+                                    <div id="gauge-stress-fill" class="gauge-bar-fill normal" style="width:0%"></div>
+                                </div>
+                                <span id="gauge-stress-val" class="gauge-value">0%</span>
+                            </div>
+                            <div id="dashboard-stress-badge" class="dashboard-alert-badge alert-green">CALM</div>
+                            <div class="lm-comm-grid">
+                                <span class="lm-comm-label">Effective</span>
+                                <span id="lm-effective" class="lm-comm-value effective">0</span>
+                                <span class="lm-comm-label">Needs Work</span>
+                                <span id="lm-improvement" class="lm-comm-value improvement">0</span>
+                                <span class="lm-comm-label">Protocol</span>
+                                <span id="lm-protocol" class="lm-comm-value">0%</span>
+                                <span class="lm-comm-label">WPS</span>
+                                <span id="lm-wps" class="lm-comm-value">0.0</span>
+                            </div>
+                            <div class="dashboard-col-title lm-notable-title">Notable</div>
+                            <div id="lm-notable-patterns" class="lm-notable-patterns"></div>
+                            <div id="lm-no-data" class="lm-no-data">Listening...</div>
+                        </div>
+                        <!-- Center: Mission Summary + Collapsible Transcript -->
+                        <div class="dashboard-col dashboard-center-col">
+                            <div id="game-objectives" class="game-objectives hidden">
+                                <div class="dashboard-col-title">Mission Objectives</div>
+                                <div id="game-alert-badge" class="game-alert-badge">GREEN</div>
+                                <div id="game-objectives-list" class="game-objectives-list">
+                                    <div class="game-obj-empty">Waiting for game data...</div>
+                                </div>
+                            </div>
+                            <div class="dashboard-col-title">Mission Status</div>
+                            <div id="mission-summary" class="mission-summary">
+                                <div id="mission-summary-text" class="mission-summary-text">Waiting for crew dialogue...</div>
+                            </div>
+                            <details class="transcript-toggle">
+                                <summary class="transcript-toggle-summary">Live Transcript</summary>
+                                <div id="dashboard-transcript-content" class="live-transcript-content"></div>
+                            </details>
+                        </div>
+                        <!-- Right: GM Timeline -->
+                        <div class="dashboard-col dashboard-gm-col">
+                            <div class="dashboard-col-title">GM Notes</div>
+                            <div id="gm-timeline" class="gm-timeline">
+                                <div id="gm-timeline-placeholder" class="gm-timeline-placeholder">AI insights will appear here after ~30s of dialogue</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Frameworks Button Bars (bottom) -->
+                    <div class="frameworks-bar">
+                        <div class="framework-row">
+                            <span class="framework-label">7 Habits</span>
+                            <div id="lm-habits-list" class="framework-buttons"></div>
+                        </div>
+                        <div class="framework-row">
+                            <span class="framework-label">TeamSTEPPS</span>
+                            <div id="lm-teamstepps-list" class="framework-buttons"></div>
+                        </div>
+                        <div class="framework-row">
+                            <span class="framework-label">NASA 4-D</span>
+                            <div id="lm-nasa4d-list" class="framework-buttons"></div>
+                        </div>
+                        <div class="framework-row">
+                            <span class="framework-label">Bloom's</span>
+                            <div id="lm-bloom-list" class="framework-buttons"></div>
+                        </div>
+                    </div>
+                </div>
                 <div id="audio-preview" class="audio-preview hidden">
                     <audio id="audio-player" controls></audio>
                     <div class="analysis-options">
